--- a/package.json
+++ b/package.json
@@ -4,24 +4,17 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
-    "@headlessui/react": "^1.4.0",
-    "@material-ui/icons": "^4.11.2",
-    "@popperjs/core": "^2.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-responsive": "^9.0.0-beta.3",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "style-components": "^0.1.0",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2",
-    "webpack": "^4.44.2"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "craco start",
